Fix z-index blocking links

--- a/src/show-code.css
+++ b/src/show-code.css
@@ -2,7 +2,7 @@
     width: 100%;
     overflow: hidden;
     position: relative;
-    z-index: -1;
+    z-index: 0;
 }
 
 #sc-background {
